--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,158 @@
-.App {
+.body {
+  height: 100vh;
+  width:100%;
+  overflow-y: scroll;
+  padding:20;
+  background-image: linear-gradient(to bottom,white,#ffffb3);
+}
+
+.top-logo {
+  width: 400px;
+  height: 120,
+}
+
+.top-body {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex:1;
+  flex-wrap: wrap;
+}
+
+.top-body-first  {
+  width:30%
+}
+
+.top-body-first img {
+  height: 700px;
+  width:100%;
+  object-fit: contain;
+}
+
+.top-body-second {
+  width:67%;
+}
+
+.top-body-second h2 {
+  font-size: 20px;
+}
+
+
+
+.top-body-second img  {
+  width:100%;
+  object-fit: contain;
+  margin-bottom: 10px;
+  margin-top: 5px;
+}
+
+.top-body-second p {
+  margin-bottom: 10px;
+}
+
+.bottom-body {
+  margin-top: 20px;
+  flex:1;
+  width: 100%;
+}
+
+.bottom-body .bottom-body-header {
+  margin-top: 20px;
+  margin-left: 20px;
+  padding-top: 50px;
+  font-weight: 600;
+}
+
+.bottom-body .bottom-body-img {
+  width: 100%;
+  flex: 1;
+  margin-bottom: 20px;
+}
+
+.bottom-body-img {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.bottom-body-img img {
+  width:80%
+}
+
+.bottom-body-desc {
+  display: flex;
+  justify-content: center;
+}
+
+.footer {
+  height: 120px;
+  background-color: red;
+  margin:20px 10px 10px 10px;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color:#fff;
+}
+
+.footer-item {
+  width:'33%';
+  display: flex;
+}
+
+.footer-item img  {
+  height: 20px;
+  width:20px;
+  object-fit: contain;
+}
+
+@media(max-width:576px) {
+  .top-logo {
+    width: 300px;
+  }
+
+  .top-body-first  {
+    width:100%
+  }
+
+  .top-body-first img {
+    height: 300px;
+    width:100%;
+    object-fit: contain;
+  }
+
+
+.top-body-second h2 {
+  font-size: 16px;
+}
+  
+
+  .top-body-second {
+    width: 100%;
+    padding: 20px;
+  }
+
+  .top-body-second ul li {
+    font-size: 14px;
+  }
+
+  .bottom-body .bottom-body-header {
+    margin-left: 20px;
+    font-weight: 600;
+    padding: 10px;
+  }
+
+
+.bottom-body-desc {
+  width: 90%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.footer {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 200px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
